Check conditions of Kings of Summer and Kings of Winter agendas

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -54,6 +54,10 @@ decks:
     too_many_copies: Contains too many copies of a card (by title)
     invalid_cards: Contains forbidden cards (cards no permitted by Faction or Agenda)
     agenda: Doesn't comply with the Agenda conditions
+  problems_info:
+    traits:
+      summer: Summer
+      winter: Winter
   build:
     choose:
       faction: Choose your faction
