Check restrinctions of Rains of Castamere agenda, and check all agendas restrictions on saving deck

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -58,6 +58,7 @@ decks:
     traits:
       summer: Summer
       winter: Winter
+      scheme: Scheme
   build:
     choose:
       faction: Choose your faction
