--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -58,6 +58,7 @@ decks:
     traits:
       summer: Verano
       winter: Invierno
+      scheme: Conspiración
   build:
     choose:
       faction: Elige tu Facción
