faq and tournament regulations added fix #78

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -13,6 +13,9 @@ nav:
   decklists: Decklists
   cards: Cards
   rules: Rules
+  rulesreference: Rules Reference
+  faq: F.A.Q.
+  tournamentregulations: Tournament Regulations
   advancedsearch: Advanced Search
   cardsearch: Card Search
   user:
