Added FAQ in Spanish. Fixed and error when not localized version of FAQ, RR or TR exists

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -12,6 +12,7 @@ nav:
   mydecks: My decks
   decklists: Decklists
   cards: Cards
+  reviews: Reviews
   rules: Rules
   rulesreference: Rules Reference
   faq: F.A.Q.
