--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -12,7 +12,11 @@ nav:
   mydecks: Mis mazos
   decklists: Mazos
   cards: Cartas
+  reviews: Reseñas
   rules: Reglas
+  rulesreference: Guía de referencia
+  faq: F.A.Q.
+  tournamentregulations: Normativa para torneos
   advancedsearch: Búsqueda avanzada
   cardsearch: Buscar carta
   user:
