--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -439,7 +439,7 @@ keyword:
     title: "Después de que ganes un reto en el que esté participando este Personaje, puedes ganar 1 de Poder para este Personaje."
   intimidate:
     name: Intimidación
-    title: "Después de que ganes un Reto en el que participe este Personaje, puedes elegir y arrodillar un Personaje controlado por el adversario derrotado cuya FUE sea igual o inferior a la diferencia de FUE por la que has ganado el reto."
+    title: "Después de que ganes un Reto en el que participe este Personaje como atacante, puedes elegir y arrodillar un Personaje controlado por el adversario derrotado cuya FUE sea igual o inferior a la diferencia de FUE por la que has ganado el reto."
   stealth:
     name: Sigilo
     title: "Cuando este Personaje sea declarado como atacante, puedes elegir un Personaje sin Sigilo controlado por el jugador defensor. Ese Personaje no puede ser declaro defensor para este reto."
