Implement rules for The Conclave

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -360,6 +360,7 @@ card:
     winter: Winter
     scheme: Scheme
     banner: Banner
+    maester: Maester
   reviews:
     title: Reviews
     none: No review yet for this card.
