--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -194,6 +194,7 @@ decks:
       initiative: Initiative value
       text: Text
       quantity: Quantity in pack
+      designer: Designer
   charts:
     faction:
       title: Card Factions
