Add export in release date order
Noticing that the website didn't allow to export in a comfortable way
for people keeping cards in binders in release order, I decided to write
this functionality. It will add the relative menu in the card export.

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -132,8 +132,8 @@ decks:
     labelswitch: Click to switch to this tag. Shift-click to toggle this tag.
     download:
       text: Text file
+      text_cycleorder: Text file (ordered by release date)
       octgn: Octgn file
-      binderordered: Binder Ordered List file
   modals:
     card:
       go: Go to card page
