--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -464,4 +464,4 @@ keyword:
     title: "Cuando esta carta entre en juego, traslada hasta X de Oro de tu suministro de Oro hasta esta carta."
   shadow:
     name: Sombra
-    title: "Marshal this card facedown into the shadows for 2 gold. As an action, pay 0 gold to bring it into play faceup."
+    title: "A card with shadow (X) can be marshaled facedown into its controller’s shadows area for 2 gold. That card can later be played (if it is an event) or brought into play faceup (if it is a character, location, or attachment) by paying X gold."
