--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -42,6 +42,8 @@ forms:
   print: Print
   download: Download
   search: Search
+  actions: Actions
+  export: Export
 
 decks:
   privatedecks: My private decks
@@ -134,6 +136,9 @@ decks:
       octgn: Octgn file
       text: Text file
       text_cycle: Text file, sorted by cycle
+    export:
+      octgn: Octgn
+      theironthrone: TheIronThrone.net
   modals:
     card:
       go: Go to card page
