--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -42,6 +42,8 @@ forms:
   print: Imprimir
   download: Descargar
   search: Buscar
+  actions: Acciones
+  export: Exportar
 
 decks:
   privatedecks: Mis mazos privados
@@ -134,6 +136,9 @@ decks:
       octgn: Fichero OCTGN
       text: Fichero de texto
       text_cycle: Fichero de texto, ordenado por ciclo
+    export:
+      octgn: Octgn
+      theironthrone: TheIronThrone.net
   modals:
     card:
       go: Ir a la página de la carta
