--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -137,8 +137,7 @@ decks:
       text: Fichero de texto
       text_cycle: Fichero de texto, ordenado por ciclo
     export:
-      octgn: Octgn
-      theironthrone: TheIronThrone.net
+      plaintext: Texto sin formato
   modals:
     card:
       go: Ir a la página de la carta
