rigged deck sorting up to deck editor.

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -82,6 +82,7 @@ decks:
       charts: Charts
       history: History
     build:
+      sort: Sort Deck
       help: Filter help
       sets:
         label: Sets
