--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -143,7 +143,7 @@ decks:
     sort:
         by_type: By type
         by_cost: By cost/gold
-        by_cycle: By cycle
+        by_cardnumber: By card number
   modals:
     card:
       go: Go to card page
