--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -137,13 +137,18 @@ decks:
     download:
       octgn: Octgn file
       text: Text file
-      text_cycle: Text file, sorted by cycle
+      text_cycle: Text file, sorted by Cycle
     export:
       plaintext: Plain text
     sort:
-        by_type: By type
-        by_cost: By cost/gold
-        by_cardnumber: By card number
+      by_cardnumber: by Card Number
+      by_cost: by Cost/Gold
+      by_faction: by Faction, then Name
+      by_factionnumber: by Faction, then Number
+      by_name: by Name
+      by_set: by Set, then Name
+      by_setnumber: by Set, then Number
+      by_type: by Type
   modals:
     card:
       go: Go to card page
