--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -141,9 +141,14 @@ decks:
     export:
       plaintext: Texto sin formato
     sort:
-      by_type: Por tipo
-      by_cost: Por coste/oro
-      by_cardnumber: Por número de carta
+      by_cardnumber: por número de carta
+      by_cost: por coste/oro
+      by_faction: por facción, luego nombre
+      by_factionnumber: por facción, luego número
+      by_name: por nombre
+      by_set: por capítulo, luego nombre
+      by_setnumber: por capítulo, luego número
+      by_type: por tipo
   modals:
     card:
       go: Ir a la página de la carta
