markdown export feature.

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -139,6 +139,7 @@ decks:
       text: Text file
       text_cycle: Text file, sorted by Cycle
     export:
+      markdown: Markdown
       plaintext: Plain text
     sort:
       by_cardnumber: by Card Number
