site slogan in needs double quoting due to colon in text.

--- a/src/AppBundle/Resources/translations/messages.de.yml
+++ b/src/AppBundle/Resources/translations/messages.de.yml
@@ -1,4 +1,4 @@
-slogan: Deckbauer für Game of Thrones: Der Eiserne Thron – Das Kartenspiel Zweite Edition
+slogan: "Deckbauer für Game of Thrones: Der Eiserne Thron – Das Kartenspiel Zweite Edition"
 
 data_load_fail: "Die Seite konnte nicht geladen werden. Klicke <a href='javascript:window.location.reload(true)'>hier</a>, um die Seite neu zu laden."
 login_required: Für diese Funktion musst du eingeloggt sein.
