shortened labels of navbar items to prevent layout breakage.

--- a/src/AppBundle/Resources/translations/messages.de.yml
+++ b/src/AppBundle/Resources/translations/messages.de.yml
@@ -9,11 +9,11 @@ seemore:
 noimage: Kein Bild
 
 nav:
-  mydecks: Meine Decklisten
+  mydecks: Meine Decks
   decklists: Decklisten
   cards: Karten
-  reviews: Karten-Rezensionen
-  rules: Spielregeln
+  reviews: Rezensionen
+  rules: Regeln
   rulesreference: Referenzhandbuch
   faq: F.A.Q.
   tournamentregulations: Turnierregeln
