RL related verbiage.

--- a/src/AppBundle/Resources/translations/messages.de.yml
+++ b/src/AppBundle/Resources/translations/messages.de.yml
@@ -340,7 +340,10 @@ decklist:
         core: "Grundspiel / Erweiterungen"
         all: Alle
         none: Keine
-
+    restrictedlist:
+      title: Liste Eingeschränkter Karten
+      joust: Tjost
+      melee: Buhurt
 search:
   label: Suche
   setbrowse: Packs durchsuchen
