adds filter by tournament tier to decklist search form.

--- a/src/AppBundle/Resources/translations/messages.de.yml
+++ b/src/AppBundle/Resources/translations/messages.de.yml
@@ -341,6 +341,9 @@ decklist:
         core: "Grundspiel / Erweiterungen"
         all: Alle
         none: Keine
+      tournament:
+        any: beliebig
+        label: Turnierebenen
 search:
   label: Suche
   setbrowse: Packs durchsuchen
