--- a/src/AppBundle/Resources/translations/messages.es.yml
+++ b/src/AppBundle/Resources/translations/messages.es.yml
@@ -340,6 +340,9 @@ decklist:
         core: "Caja básica / Deluxe"
         all: todo
         none: ninguno
+      tournament:
+        any: cualquiera
+        label: Categoría de torneo
 search:
   label: Buscar
   setbrowse: Explorar capítulos
