--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -254,7 +254,7 @@ decks:
 decklist:
   publish:
     name: Name
-    placedhigh: Placed high in a tournament?
+    placedhigh: Placed high in a tournament? If so, then please specify the tournament tier.
     no: No
     derived: Derived from (copy id or address of the decklist this one is inspired from)
     description: Description
@@ -343,7 +343,7 @@ decklist:
         none: none
       tournament:
         any: any
-        label: Tournament Tier
+        label: Tournament tier
 search:
   label: Search
   setbrowse: Browse by set
