implements deck validation rules for "The White Book" agenda.

--- a/src/AppBundle/Resources/translations/messages.de.yml
+++ b/src/AppBundle/Resources/translations/messages.de.yml
@@ -384,6 +384,7 @@ card:
     scheme: Komplott
     banner: Banner
     maester: Maester
+    kingsguard: Königsgarde
   reviews:
     title: Karten-Rezensionen
     none: Noch keine Rezensionen dieser Karte.
