relabeled "Restricted List" to "Tournament Legality".
since the scope of this check has been expanded, the wording
needed adjustment as well.

--- a/src/AppBundle/Resources/translations/messages.de.yml
+++ b/src/AppBundle/Resources/translations/messages.de.yml
@@ -488,7 +488,7 @@ keyword:
   shadow:
     name: Schatten
     title: "Eine Karte mit Schatten (X) kann man für 2 Gold verdeckt im Schattenbereich ihres kontrollierenden Spielers aufmarschieren lassen. Jene Karte kann später gespielt werden (falls es sich um ein Ereignis handelt) oder offen ins Spiel geholt werden (falls es sich um einen Charakter, Ort oder eine Verstärkung handelt), indem der Spieler X Gold bezahlt."
-restrictedlist:
-  title: Liste Eingeschränkter Karten
+tournamentLegality:
+  title: Turnierzulässigkeit
   joust: Tjost
   melee: Buhurt
