--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -488,7 +488,7 @@ keyword:
   shadow:
     name: Shadow
     title: "A card with shadow (X) can be marshaled facedown into its controller’s shadows area for 2 gold. That card can later be played (if it is an event) or brought into play faceup (if it is a character, location, or attachment) by paying X gold."
-restrictedlist:
-  title: Restricted List
+tournamentLegality:
+  title: Tournament Legality
   joust: Joust
   melee: Melee
