--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -378,6 +378,8 @@ pag:
   cardscount: "{0} There is no cards | {1} One card | ]1,Inf] %count% cards"
 
 card:
+  podinfo_single: '%format% - If %restricted% is your chosen restricted card, you cannot include %card% in your deck.'
+  podinfo_multiple: '%format% - If %restricted% is your chosen restricted card, you cannot include the following cards in your deck: %cards%.'
   keywords:
     shadow: Shadow
   traits:
