indicate melee vs joust BL membership and compliance.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -380,6 +380,16 @@ pag:
 card:
   podinfo_single: "%format% - Falls %restricted% Deine Eingeschränkte Karte ist, dann kannst Du %card% nicht in Dein Deck aufnehmen."
   podinfo_multiple: '%format% - Falls %restricted% Deine Eingeschränkte Karte ist, dann kannst Du die folgenden Karten nicht in Dein Deck aufnehmen: %cards%.'
+  rl-joust:
+    title: "Diese Karte ist auf der Liste Eingeschränkter Karten für Tjost."
+  rl-melee:
+    title: "Diese Karte is auf der Liste Eingeschränkter Karten für Buhurt."
+  bl:
+    title: "Diese Karte ist nicht für Turniere zugelassen."
+  bl-joust:
+    title: "Diese Karte ist nicht für Tjost Turniere zugelassen."
+  bl-melee:
+    title: "Diese Karte ist nicht für Buhurt Turniere zugelassen."
   keywords:
     shadow: Schatten
   traits:
@@ -492,12 +502,6 @@ keyword:
   shadow:
     name: Schatten
     title: "Eine Karte mit Schatten (X) kann man für 2 Gold verdeckt im Schattenbereich ihres kontrollierenden Spielers aufmarschieren lassen. Jene Karte kann später gespielt werden (falls es sich um ein Ereignis handelt) oder offen ins Spiel geholt werden (falls es sich um einen Charakter, Ort oder eine Verstärkung handelt), indem der Spieler X Gold bezahlt."
-  rl-joust:
-    title: "Diese Karte ist auf der Liste Eingeschränkter Karten für Tjost."
-  rl-melee:
-    title: "Diese Karte is auf der Liste Eingeschränkter Karten für Buhurt."
-  banned:
-    title: "Diese Karte ist nicht für Turniere zugelassen."
 tournamentLegality:
   title: Turnierzulässigkeit
   joust: Tjost
