adds ability to export multiple lists to file.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -138,6 +138,9 @@ decks:
       delete:
         label: Löschen
         selected: Alle ausgewählten Decklisten entfernen
+      download:
+        label: Herunterladen
+        selected: Alle ausgewählten Decklisten herunterladen
     labelswitch: Klicken nur Decklisten mit diesem Tag anzuzeigen. Umschalt+Klicken um auch Decklisten mit diesem Tag anzuzeigen.
     download:
       text: Textdatei
