--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -138,6 +138,9 @@ decks:
       delete:
         label: Delete
         selected: Delete all decks selected
+      download:
+        label: Download
+        selected: Download all decks selected
     labelswitch: Click to switch to this tag. Shift-click to toggle this tag.
     download:
       octgn: Octgn file
