adds all/none selection toggles to decks ui.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -47,6 +47,8 @@ forms:
   sort: Sortieren
 
 decks:
+  all: Alle
+  none: Keine
   privatedecks: Meine privaten Decklisten
   slotcount: "(%current%/%max% Decklisten)"
   version: Version %version%
