--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -415,6 +415,7 @@ card:
     banner: Banner
     maester: Maester
     kingsguard: Königsgarde
+    wildling: Wildling
   reviews:
     title: Karten-Rezensionen
     none: Noch keine Rezensionen dieser Karte.
