--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -415,6 +415,7 @@ card:
     banner: Banner
     maester: Maester
     kingsguard: Kingsguard
+    wildling: Wildling
   reviews:
     title: Reviews
     none: No review yet for this card.
