Adds page for restricted lists.

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -16,6 +16,7 @@ nav:
   rules: Rules
   rulesreference: Rules Reference
   faq: F.A.Q.
+  restrictions: Restricted and Banned Cards
   tournamentregulations: Tournament Regulations
   advancedsearch: Advanced Search
   cardsearch: Card Search
