--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -16,6 +16,7 @@ nav:
   rules: Reglas
   rulesreference: Guía de referencia
   faq: F.A.Q.
+  restrictions: Cartas restringidas y prohibidas
   tournamentregulations: Normativa para torneos
   advancedsearch: Búsqueda avanzada
   cardsearch: Buscar carta
@@ -524,4 +525,3 @@ tournamentLegality:
   title: Tournament Legality
   joust: Justa
   melee: Contienda
-restrictedLists: Listas Restringida
