adds lang strings for "work in progress" card label.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -464,6 +464,7 @@ card:
       strini: S.
       type: T.
       faction: F.
+    workInProgress: Diese Karte gilt als "in Arbeit" und kann ohne weitere Ankündigung geändert oder entfernt werden.
 
 challenges:
   military: Militäreinsatz
